--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.3",
     "core-js": "^3.6.4",
     "cross-spawn": "^6.0.5",
+    "date-fns": "^2.9.0",
     "del": "^3.0.0",
     "dotenv": "^6.0.0",
     "express": "4.16.3",
